--- a/app/src/main/res/layout/date_item.xml
+++ b/app/src/main/res/layout/date_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="48dp"
+    android:layout_height="56dp"
     android:orientation="vertical">
 
     <TextView
@@ -16,12 +16,12 @@
 
     <TextView
         android:id="@+id/day_number_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/date_oval_background"
         android:fontFamily="@font/roboto"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="18sp"
         tools:text="11" />
 </LinearLayout>
