--- a/app/src/main/res/layout/city_card_item.xml
+++ b/app/src/main/res/layout/city_card_item.xml
@@ -11,6 +11,12 @@
     app:cardElevation="2dp">
 
     <TextView
+        android:id="@+id/city_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/city_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
