--- a/app/src/main/res/menu/city_choose_menu.xml
+++ b/app/src/main/res/menu/city_choose_menu.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search"
-        android:title="@string/search_hint_menu"
-        app:actionViewClass="android.widget.SearchView"
-        app:showAsAction="ifRoom" />
-
-    <item
         android:id="@+id/app_bar_update"
         android:icon="@drawable/ic_update"
         android:title="@string/update_hint_menu"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/app_bar_add"
+        android:icon="@android:drawable/ic_menu_add"
+        android:title="@string/add_hint_menu"
         app:showAsAction="ifRoom" />
 </menu>
