day 5 Add some features

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,8 @@
         android:id="@+id/xsolla_screen"
         layout="@layout/xsolla_screen"/>
 
+    <include
+        android:id="@+id/error_banner"
+        layout="@layout/error_banner"/>
+
 </FrameLayout>
