--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -4,6 +4,6 @@
 
     <solid android:color="@color/colorPrimary" />
 
-    <corners android:radius="25dp" />
+    <corners android:radius="@dimen/button_corner_radius" />
 
 </shape>
