--- a/app/src/main/res/drawable/date_oval_background.xml
+++ b/app/src/main/res/drawable/date_oval_background.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@color/colorPrimary" />
-    <size android:width="12dp" android:height="12dp"/>
+    <size
+        android:width="@dimen/oval_size"
+        android:height="@dimen/oval_size" />
 </shape>
