--- a/app/src/main/res/menu/city_choose_menu.xml
+++ b/app/src/main/res/menu/city_choose_menu.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/app_bar_add"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/ic_add"
         android:title="@string/add_hint_menu"
         app:showAsAction="ifRoom" />
 </menu>
