--- a/app/src/main/res/layout/date_item.xml
+++ b/app/src/main/res/layout/date_item.xml
@@ -10,14 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto"
-        android:textSize="14sp"
         android:textStyle="bold"
         tools:text="Пн" />
 
     <TextView
         android:id="@+id/day_number_tv"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/day_number_size"
+        android:layout_height="@dimen/day_number_size"
         android:layout_marginTop="12dp"
         android:background="@drawable/date_oval_background"
         android:fontFamily="@font/roboto"
