--- a/app/src/main/res/layout/error_banner.xml
+++ b/app/src/main/res/layout/error_banner.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/roboto"
-        android:text="Произошел сбой в работе приложения, пожалуйста, проверьте ваше интернет-соединение и перезагрузите страницу"
+        android:text="@string/network_error_tv"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
@@ -45,7 +45,7 @@
         android:background="@drawable/button_background"
         android:fontFamily="@font/roboto"
         android:stateListAnimator="@null"
-        android:text="Перезагрузить"
+        android:text="@string/network_error_btn"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="20sp"
