--- a/app/src/main/res/layout/fragment_add_city.xml
+++ b/app/src/main/res/layout/fragment_add_city.xml
@@ -9,7 +9,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/finded_city_rv"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/standart_16dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
