--- a/app/src/main/res/layout/fragment_city_choose.xml
+++ b/app/src/main/res/layout/fragment_city_choose.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/city_choose_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.CityChooseFragment">
+    android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cities_rv"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/standart_8dp"
-        tools:itemCount="3"
-        tools:listitem="@layout/city_card_item" />
+        tools:context=".ui.fragment.CityChooseFragment">
 
-    <TextView
-        android:id="@+id/cities_empty_tv"
-        style="@style/TextViewTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="@dimen/standart_16dp"
-        android:layout_marginEnd="@dimen/standart_16dp"
-        android:text="@string/fragment_choose_empty_cities"
-        android:textAlignment="center"
-        android:visibility="gone" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cities_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/standart_8dp"
+            tools:itemCount="3"
+            tools:listitem="@layout/city_card_item" />
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/cities_empty_tv"
+            style="@style/TextViewTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/standart_16dp"
+            android:layout_marginEnd="@dimen/standart_16dp"
+            android:text="@string/fragment_choose_empty_cities"
+            android:textAlignment="center"
+            android:visibility="gone" />
+
+    </FrameLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
