day 7 Add presenter to CityChooseFragment

--- a/app/src/main/res/layout/fragment_add_city.xml
+++ b/app/src/main/res/layout/fragment_add_city.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragment.AddCityFragment">
+    tools:context=".presentation.addcity.AddCityFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/finded_city_rv"
