--- a/app/src/main/res/layout/fragment_city_choose.xml
+++ b/app/src/main/res/layout/fragment_city_choose.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.CityChooseFragment">
+        tools:context=".presentation.citychoose.CityChooseFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/cities_rv"
