--- a/app/src/main/res/layout/fragment_city_detail.xml
+++ b/app/src/main/res/layout/fragment_city_detail.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@android:color/white"
-        tools:context=".ui.fragment.CityDetailFragment">
+        tools:context=".presentation.citydetail.CityDetailFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/dates_rv"
