--- a/app/src/main/res/layout/fragment_city_detail.xml
+++ b/app/src/main/res/layout/fragment_city_detail.xml
@@ -17,7 +17,7 @@
             android:id="@+id/dates_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/standart_36dp"
+            android:paddingStart="@dimen/standart_36dp"
             android:layout_marginTop="@dimen/standart_8dp"
             tools:itemCount="1"
             tools:listitem="@layout/date_item" />
